syntax = "proto3";

package crescent.farm.v1beta1;

import "gogoproto/gogo.proto";
import "crescent/farm/v1beta1/farm.proto";
import "google/protobuf/timestamp.proto";

option go_package                      = "github.com/crescent-network/crescent/x/farm/types";
option (gogoproto.goproto_getters_all) = false;

message GenesisState {
  Params                           params             = 1 [(gogoproto.nullable) = false];
  uint64                           last_plan_id       = 2;
  google.protobuf.Timestamp        last_block_time    = 3 [(gogoproto.stdtime) = true];
  repeated Plan                    plans              = 4 [(gogoproto.nullable) = false];
  repeated FarmRecord              farms              = 5 [(gogoproto.nullable) = false];
  repeated Position                positions          = 6 [(gogoproto.nullable) = false];
  repeated HistoricalRewardsRecord historical_rewards = 7 [(gogoproto.nullable) = false];
}

message FarmRecord {
  string denom = 1;
  Farm   farm  = 2 [(gogoproto.nullable) = false];
}

message HistoricalRewardsRecord {
  string            denom              = 1;
  uint64            period             = 2;
  HistoricalRewards historical_rewards = 3 [(gogoproto.nullable) = false];
}
